Finalized the github pages setup

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "name": "Happy Bird"
   },
   "author": {
-    "name": "Noah Trungold",
-    "url": "https://github.com/ntrungold"
+    "name": "Riyara Master, Kevin Peachman, Ava Stratton, Matt Donovan",
+    "url": "https://github.com/rmmaster, https://github.com/kpeachman, https://github.com/avastratt, https://github.com/udelmdonovan"
   },
   "repository": {
     "type": "git",
